# deepfunding

./: .gitignore  README.md  c_score.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
dataset/: sample_submission.csv  test.csv  train.csv
notebooks/: analysis.ipynb  analysis2.ipynb  dependency_graph.html  dependency_graph_clean.html  dependency_graph_generator.py  graph_generator.py
public/: index.html
src/: App.js  index.css
src/utils/: constants.js  dataGenerator.js  exportUtils.js
