[project]
name = "deepfunding"
version = "0.1.0"
description = "Deep Funding Attribution Optimizer for Invisible Infrastructure"
authors = [
    {name = "tosoham",email = "todrsoham@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "cupy-cuda12x (>=13.6.0,<14.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "networkx (>=3.5,<4.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dateutil = "^2.9.0.post0"
pyvis = "^0.3.2"
jupyter = "^1.1.1"
polars = "^1.33.1"
pandas = "^2.3.2"
cupy-cuda12x = "^13.6.0"
numpy = "^2.3.3"
scipy = "^1.16.1"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
networkx = "^3.5"
requests = "^2.32.5"

